--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -7,12 +7,11 @@
         android:layout_width="150dp"
         android:layout_height="220dp"
         android:id="@+id/imageViewMovieDetailCover"
-        android:layout_marginRight="110dp"
-        android:layout_below="@+id/textViewMovieDetailTitle"
+        android:layout_marginLeft="10dp"
+        android:scaleType="centerCrop"
+        android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="5dp"
-        android:scaleType="centerCrop" />
+        android:layout_marginTop="20dp" />
 
     <TextView
         android:layout_width="wrap_content"
