--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -1,7 +1,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.almasapp.hw5.almasapp5.MovieDetailFragment">
+    tools:context="com.almasapp.hw5.almasapp5.MovieDetailFragment"
+    android:background="#ffe5e5e5">
 
     <ImageView
         android:layout_width="150dp"
@@ -20,9 +21,9 @@
         android:text="Title"
         android:textStyle="bold"
         android:id="@+id/textViewMovieDetailTitle"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp" />
+        android:layout_alignTop="@+id/imageViewMovieDetailCover"
+        android:layout_toEndOf="@+id/imageViewMovieDetailCover"
+        android:layout_marginLeft="10dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -53,11 +54,11 @@
         android:layout_height="fill_parent"
         android:text="Description"
         android:id="@+id/textViewMovieDetailDescription"
-        android:layout_marginRight="5dp"
-        android:layout_marginLeft="5dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginLeft="16dp"
         android:layout_below="@+id/imageViewMovieDetailCover"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="5dp" />
+        android:layout_marginTop="16dp" />
 
     <TextView
         android:layout_width="wrap_content"
