--- a/app/src/main/res/layout/movie_row_linear.xml
+++ b/app/src/main/res/layout/movie_row_linear.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_margin="5dp"
     card_view:cardCornerRadius="5dp"
-    android:fromXDelta="0" android:fromYDelta="1000" android:duration="80"
+    android:fromXDelta="0"
+    android:fromYDelta="1000"
+    android:duration="80"
     android:layout_height="match_parent">
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -28,9 +31,10 @@
             android:text="Title"
             android:id="@+id/textViewMoviesTitle"
             android:layout_alignParentTop="true"
-            android:layout_marginTop="3dp"
+            android:layout_marginTop="8dp"
             android:textColor="#ff454545"
-            android:layout_toEndOf="@+id/imageViewMoviesImage" />
+            android:layout_toEndOf="@+id/imageViewMoviesImage"
+            android:layout_marginLeft="8dp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -41,10 +45,12 @@
             android:id="@+id/textViewMoviesDescription"
             android:textColor="#ff454545"
             android:layout_below="@+id/ratingBarMovie"
-            android:layout_marginTop="1dp"
+            android:layout_marginTop="4dp"
             android:layout_alignBottom="@+id/imageViewMoviesImage"
             android:layout_alignParentEnd="true"
-            android:layout_toEndOf="@+id/imageViewMoviesImage" />
+            android:layout_toEndOf="@+id/imageViewMoviesImage"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp" />
 
         <RatingBar
             style="?android:attr/ratingBarStyleSmall"
@@ -54,7 +60,8 @@
             android:layout_below="@+id/textViewMoviesTitle"
             android:layout_toEndOf="@+id/imageViewMoviesImage"
             android:numStars="10"
-            android:layout_marginTop="1dp" />
+            android:layout_marginTop="4dp"
+            android:layout_marginLeft="8dp" />
 
     </RelativeLayout>
 </android.support.v7.widget.CardView>
